--- a/variants/inhero_mr2/platformio.ini
+++ b/variants/inhero_mr2/platformio.ini
@@ -79,7 +79,7 @@ build_flags =
   -D ADMIN_PASSWORD='"password"'
   -D MAX_NEIGHBOURS=50
 ;  -D MESH_PACKET_LOGGING=1
-  -D MESH_DEBUG=1
+;  -D MESH_DEBUG=1
 build_src_filter = ${inhero_mr2.build_src_filter}
   +<helpers/ui/SSD1306Display.cpp>
   +<../examples/simple_repeater>
